# gh-issue-pull

./: .gitmodules  README.md  pyproject.toml
analysis/: README.md  top_repos_analysis.ipynb
analysis/data/: top_1000_pypi.jsonl
gh_issue_pull/: classes.py  helpers.py  main.py
