[tool.poetry]
name = "gh-issue-pull"
version = "0.1.0"
description = ""
authors = ["hobbleabbas <shakeel.hussein@mail.utoronto.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.9.0"
pydantic = "^2.9.2"
icecream = "^2.1.3"
openai = "^1.51.2"
bittensor = "^8.2.0"
boto3 = "^1.35.39"
ipdb = "^0.13.13"
ipython = "^8.28.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
